# photo-organizer

./: .dockerignore  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  COMMITS.md  DESENVOLVIMENTO.md  Dockerfile  Dockerfile.dev  LICENSE  LINTING.md  MANUAL_USUARIO.md  Makefile  README.md  RESUMO_ALTERACOES.md  commit.sh  demo_fluxo_melhorado.py  demo_melhorias.py  demo_novas_funcionalidades.py  demo_simples.py  dev.sh  docker-compose.yml  docker-dev.sh  ler_imagens.py  ler_imagens_backup.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  teste_ano_bebe.py  teste_cli_integracao.py  teste_organizacao_customizada.py
photo_organizer/: controller.py  directory_scanner.py  file_handler.py  file_organizer.py  models.py  service.py
scripts/: clean-code.sh  format-and-lint.sh
src/cli/: __init__.py  menu_controller.py  photo_organizer_cli.py
src/domain/: __init__.py  configuration.py  image.py
src/services/: backup_manager.py  duplicate_manager.py  file_renamer.py  folder_organizer.py  image_analyzer.py  image_processor.py  photo_organizer_service.py  report_generator.py
src/utils/: base_organizer.py  event_manager.py  file_manager.py  operation_manager.py  ui_formatter.py
tests/: test_file_organizer.py  test_main.py  test_service_and_controller.py
